// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OptionInfo /> should render price element 1`] = `
<ul
  className="css-jy6f7q css-h7r55a"
>
  <GridItem
    aria-hidden={true}
    className="css-1bia360"
    component="li"
    grow={1}
    shrink={1}
  >
    Label: 
    <FormatPrice
      className=""
      currency="EUR"
      fractions={true}
      price={10}
    />
  </GridItem>
  <div
    hidden={true}
    id="some-id"
  >
    price.label
    Some Text
  </div>
</ul>
`;

exports[`<OptionInfo /> should render required element 1`] = `
<ul
  className="css-jy6f7q css-h7r55a"
>
  <GridItem
    aria-hidden={true}
    className="css-cr41pz"
    component="li"
    grow={0}
    shrink={1}
  >
    <Translate
      className=""
      params={Object {}}
      role={null}
      string="common.required"
    />
  </GridItem>
  <div
    hidden={true}
    id="some-id"
  >
    common.required
    Some Text
  </div>
</ul>
`;
